2007-01-07  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* check_spice.cpp: correct polarity of AC and DC current sources,
	thanks to Rainer Wirtz

2006-08-30  Stefan Jahn  <stefan@lkcc.org>

	* parse_spice.y: Reverting the patch about the default value
	for F/E/G/H controlled sources.

2006-08-26  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l, parse_spice.y, check_spice.cpp: Parsing but
	ignoring behavioural sources.  Translation of L's and C's
	initial conditions.

2006-08-20  Stefan Jahn  <stefan@lkcc.org>

	* parse_spice.y: When value for F/E/G/H controlled sources is
	missing then using a default transconductance/transresistance/gain
	of 1.

2006-08-17  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp (mdl2qucs): Added MDL to Qucs dataset converter
	using the functionality in the qucsator library.

2006-08-08  Stefan Jahn  <stefan@lkcc.org>

	* parse_vcd.y, check_vcd.cpp: Parsing and ignoring one-
	dimensional memory arrays stored in VCD files.

2006-07-19  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp: Fixed Qucs dataset loading in order to be
	able to handle stdin input.

2006-07-16  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp (zvr2qucs): Added ZVR to Qucs dataset converter
	using the functionality in the qucsator library.

2006-07-02  Stefan Jahn  <stefan@lkcc.org>

	* check_vcd.cpp (VCD_INCLUDE_RANGE): Disabled output of range
	specifications in bit-vector variable names.  Integer values are
	now written as signed integers instead of bit-vectors.

2006-06-06  Stefan Jahn  <stefan@lkcc.org>

	* scan_vcd.l: Fixed yet another bug in the VCD lexer.

	* qucs_producer.cpp: Differentiating between binary data (X)
	and real data (R) saved in VCD files.

	* check_vcd.cpp: Saving value attributes in dataset structure.

2006-06-04  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Adapted the qucs dataset producer.

	* qucsconv.cpp: Added touchstone->qucsdata and citi->qucsdata
	wrapper functions.

2006-05-22  Stefan Jahn  <stefan@lkcc.org>
